tests/snapshots/examples_fixtures/type_system__failing__180_type_adt_missing_assign.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/180_type_adt_missing_assign.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `=` after type declaration name.

  --> examples/type_system/failing/180_type_adt_missing_assign.flx:1:15
  |
1 | type Maybe<T> Some(T) | None
  |               ^^^^

Hint:
  ADT sugar uses `type Name = Ctor(...) | Other`.
== stdout ==
<not executed>
